# Nyro

./: .gitignore  CHANGELOG.md  CHANGELOG_CN.md  Cargo.toml  Makefile  README.md  README_CN.md
.github/workflows/: ci.yml  claude-review.yml  release-desktop.yml  release-server.yml
Casks/: nyro.rb
crates/nyro-core/: Cargo.toml
crates/nyro-core/assets/: providers.json
crates/nyro-core/src/: config.rs  lib.rs
crates/nyro-core/src/admin/: mod.rs
crates/nyro-core/src/auth/: mod.rs  registry.rs  types.rs
crates/nyro-core/src/auth/drivers/: mod.rs  openai.rs  shared.rs
crates/nyro-core/src/cache/: backend.rs  config.rs  entry.rs  key.rs  mod.rs  vector.rs  vector_pg.rs  vector_sqlite.rs
crates/nyro-core/src/crypto/: mod.rs
crates/nyro-core/src/db/: mod.rs  models.rs
crates/nyro-core/src/logging/: mod.rs
crates/nyro-core/src/protocol/: mod.rs  types.rs
crates/nyro-core/src/protocol/anthropic/: decoder.rs  encoder.rs  stream.rs  types.rs
crates/nyro-core/src/protocol/gemini/: decoder.rs  encoder.rs  stream.rs  types.rs
crates/nyro-core/src/protocol/openai/: decoder.rs  encoder.rs  mod.rs  stream.rs  types.rs
crates/nyro-core/src/protocol/openai/responses/: decoder.rs  formatter.rs  stream.rs
crates/nyro-core/src/protocol/semantic/: response_items.rs
crates/nyro-core/src/proxy/: adapter.rs  auth.rs  client.rs  handler.rs  mod.rs  server.rs
crates/nyro-core/src/router/: health.rs  matcher.rs  selector.rs
crates/nyro-core/src/storage/: memory.rs  mod.rs  traits.rs
crates/nyro-core/src/storage/mongo/: adapter.rs  config.rs  documents.rs  mod.rs
crates/nyro-core/src/storage/mysql/: mod.rs
crates/nyro-core/src/storage/postgres/: mod.rs
crates/nyro-core/src/storage/sql/: config.rs  dialect.rs  mod.rs  pool.rs  query.rs
crates/nyro-core/src/storage/sqlite/: mod.rs
crates/nyro-core/tests/: protocol_conversion.rs
docker/runtime/: docker-entrypoint.sh
docs/design/: ai-gateway.md  architecture.md  litellm-comparison-roadmap.md  oauth-bindings.md  route-apikey.md  route-multi-target.md
docs/server/: README.md
docs/standalone/: README.md
examples/: standalone.yaml
scripts/install/: install.ps1  install.sh
scripts/release/: gen_latest_json.py
scripts/smoke/: server_smoke.py  storage_backends_smoke.py
src-server/: Cargo.toml
src-server/src/: admin_routes.rs  main.rs  yaml_config.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
webui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
webui/src/: index.css  main.tsx
webui/src/components/: resource-form.tsx
webui/src/lib/: auth.ts  backend-error.ts  types.ts  (+2 more)
(+13 files in other folders)
