[workspace]
resolver = "2"
members = ["crates/nyro-core", "src-tauri", "src-server"]

[workspace.package]
version = "1.5.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/NYRO-WAY/NYRO"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
